--- a/localisation/replace/AML_focus_l_english.yml
+++ b/localisation/replace/AML_focus_l_english.yml
@@ -178,3 +178,85 @@
  tod_national_oil:1 "Todorovian National Oil"
  maquinas_de_todorovia:1 "Maquinas Todorovia"
  industria_coral:1 "Industria Coral"
+ BLM_our_culture:0 "Our culture"
+ BLM_our_culture_desc:0 "not finished"
+ BLM_our_place:0 "Our place"
+ BLM_our_place_desc:0 "not finished"
+ BLM_government_reform:0 "Government reform"
+ BLM_government_reform_desc:0 "The government was created by old British nobles with no regard for the people, we must fix this bureaucracy."
+ BLM_land_reform:0 "Land reform"
+ BLM_land_reform_desc:0 "A lot of land is in the hands of the nobles thanks to programs of the previous administrations, we must give some to the peasants to allow further development."
+ BLM_local_garrisons:0 "Local Garrisons"
+ BLM_local_garrisons_desc:0 "In order to better protect our land we must form local garrisons with training in its local areas."
+ BLM_nobility_issue:0 "Nobility Issue"
+ BLM_nobility_issue_desc:0 "The Nobility have been a fundamental part of forging British-Lemuria, from conquering land for the colony to establishing major towns and outposts. Now we must address their status as potential tools against the government."
+ BLM_disband_the_ig:0 "Disband the I.G."
+ BLM_disband_the_ig_desc:0 "The Imperial Garrison is something which dates back to the formation of the first British colonies, now it has become out-dated and serves more as a political tool of an old oppressive government."
+ BLM_federal_sympathies:0 "Federal sympathies"
+ BLM_federal_sympathies_desc:0 "To further smoothen the transformation to a federation we must appoint new pro-federation officials and bring further benefits to federal sympathizers."
+ BLM_second_anglosaxon_reforms:0 "Second Anglo-Saxon Reforms"
+ BLM_second_anglosaxon_reforms_desc:0 "The Anglo-Saxon Reforms were devestating reforms which ravaged the country from 1893-1911. The era was known for its brutality against non Anglo-Saxon peoples and Anglish peoples, seeing them all as threats and barbarians in the need of civilizing. Now a great debate has started in the British-Lemurian parliment."
+ BLM_continue_the_reforms:0 "Continue the reforms."
+ BLM_continue_the_reforms_desc:0 ""For the good of the nation we must further the reforms, let us not forget the brutality of these barbarians and their refusal to co-operate with changes in the colony. The barbarians must be replaced with the civilized British man!" -Andrew L. Baxter, addressing the British-Lemurian Parliment."
+ BLM_act_283:0 "Act 283"
+ BLM_act_283_desc:0 "Act 283 was a part of the British-Lemurian constitution, officially an emergency act, which allowed for the ministers of government to remove unwanted ministers from government. Federalist ministers officially outnumbered Loyalist ones though the Loyalists held stronger seats in government."
+ BLM_home_islands_agreement:0 "Home Islands Agreement"
+ BLM_home_islands_agreement_desc:0 "We must seek to compensate Britain in some way if we want to maintain friendly relations with Britain and the commonwealth."
+ BLM_5_year_compensation:0 "5 Year Compensation"
+ BLM_5_year_compensation_desc:0 "The 5 year compensation has been decided according to the agreement signed in London, the British shall own a part of the British-Lemurian industry for 3 years and maintain a military alliance with the nation. It shall still be a part of the commonwealth, though these changes will remove its dominion status."
+ BLM_our_people:0 "Our people"
+ BLM_our_people_desc:0 "not finished"
+ BLM_our_lemuria:0 "Our Lemuria"
+ BLM_our_lemuria_desc:0 "not finished"
+ BLM_local_industry:0 "Local Industry"
+ BLM_local_industry_desc:0 "In an effort to keep unrest in the new nation of British Lemuria low we must ensure the employment of the individual, by subsidizing factories and keeping a strong economic union between the nations of British-Lemuria."
+ BLM_newmilitaryindustry:0 "New Military Industry"
+ BLM_newmilitaryindustry_desc:0 "In an effort to arm this new nation we must construct new military industry to keep up with the Kumari."
+ BLM_lemuriandefenseforce:0 "Form the LDF"
+ BLM_lemuriandefenseforce_desc:0 "The Lemurian Defense Force, the LDF, is an armed forces initiative spanning the entire colony of the former dominion of British Lemuria."
+ BLM_lemurianindustrialcentre:0 "Lemurian Industrial Centre"
+ BLM_lemurianindustrialcentre_desc:0 "The Lemurian Industrial Centre was a term used to describe the growing industry in the country, now we must ensure it is still growing and still keeping its status as the biggest in the continent of Lemuria."
+ BLM_completedecentralization:0 "Decentralize Completely"
+ BLM_completedecentralization_desc:0 "In an effort to give the local governments more authority we must decentralize completely, a new order will be forged using local officials rather then old nobles in New Hampstead."
+ BLM_independentrepublics:0 "Lemurian Republics"
+ BLM_independentrepublics_desc:0 "The Lemurian Republics are the states which encompass the Dominion of British-Lemuria, they vary much in culture, language and size and we must make sure they're properly taken care of."
+ BLM_colonistissues:0 "Colonial Issues"
+ BLM_colonistissues_desc:0 "Due to issues with former colonists in these regions we must accompany them back to their homelands, secure their rights or bring them to the British part of the new Lemurian territory."
+ BLM_flagissues:0 "Flag Issues"
+ BLM_flagissues_desc:0 "Many have raised issues over the British-Lemurian flag, many citing that we should change it due to it reflecting an old now bygone era of Lemuria."
+ BLM_newlemuria:0 "A New Lemuria"
+ BLM_newlemuria_desc:0 "A New Lemuria, a better Lemuria, a stronger Lemuria. Those are some of the names for this new administration and we must show this."
+ BLM_the_queens_industry:0 "The Royal Industry"
+ BLM_the_queens_industry_desc:0 "In an effort to increase our industrial capacity and decrease the unrest we must open up new job opportunities, jobs for one and all."
+ BLM_found_the_new_hampstead_university:0 "New Hampstead University
+ BLM_found_the_new_hampstead_university_desc:0 "In an effort to increase our prestige in the commonwealth we must found our own university and stop relying on sending our men to the home islands for a good education. It is time for our homegrown intellectuals."
+ BLM_new_british_education:0 "New British Education"
+ BLM_new_british_education:0 "To reflect this new intellectual society of British Lemuria we must reform our education system and put a further emphasis on being British and duty to the queen, country and god."
+ BLM_the_industrial_new_hampstead:0 "Industrial New Hampstead"
+ BLM_the_industrial_new_hampstead:0 "New Hampstead lost a lot of its industry the last few years due to the great depression, we must try and unwind this by increasing it more then just a few factories in the rural areas."
+ BLM_fix_the_shipyards:0 "Fix the Shipyards!"
+ BLM_fix_the_shipyards_desc:0 "We've been underperforming regarding our ship producing capacity and limited our trade due to poor shipyard conditions. We must fix this."
+ BLM_the_roads:0 ""The roads the roads!""
+ BLM_the_roads_desc:0 "Infastructure has been a big problem in British Lemuria for many years, now we must win over the public and further improve our country by building new roads and new railroads.!"
+ BLM_the_queens_lemuria:0 "Imperial British Lemuria"
+ BLM_the_queens_lemuria_desc:0 "British Lemuria has always been an imperial territory of Britain, now we must reflect our status in the commonwealth through a memorial."
+ BLM_attract_british_settlers:0 "Attract British Settlers"
+ BLM_attract_british_settlers_desc:0 "We must attract more British settlers, in many areas we have next to no Brits besides government officials. We must improve this by giving British settlers economic benefits."
+ BLM_abolish_anglish_socities:0 "Abolish Anglishism"
+ BLM_abolish_anglish_socities_desc:0 "The Anglish National Movement is a Fascist organization which aims to kick the Loyalists out and replace the government with an Anglish one. The Anglish are a large group in British-Lemuria, heavily germanicized British settlers who speak an older dialect of English mixed with German and old Norse. A language which is affront to god."
+ BLM_the_british_man:0 ""The British Man...""
+ BLM_the_british_man_desc:0 "Who is the British man? We must answer this question to make sure we know what kind of society we are."
+ BLM_suppress_natives:0 "Promote Anglo-Saxonism"
+ BLM_suppress_natives_desc:0 "Suppress the other cultures, we are all Anglo-Saxons and you will behave like an Anglo-Saxon!"
+ BLM_integrate_the_2_colonies:0 "Integrate the 2 colonies"
+ BLM_integrate_the_2_colonies_desc:0 "Artura and Suisse have never been officially integrated, with Artura remaining completely independent and Suisse acting only as an occupied colony. We must fix this by passing new laws, which will be difficult without the parliment."
+ BLM_royal_cadet_corps_desc:0 "The BLRS was officially a continuation school for the Youth Waysmen boys who were interested in a military career. The Youth Waysmen were a band of young men, officially named the Youth Waysmen of Lemuria, which combined old Tapfere Walker explorer traditions and native-Lemurian traditions. These would become excellent pathfinders and skilled guides, dominating the British-Lemurian armed forces."
+ BLM_royal_cadet_corps:0 "British-Lemurian Recon School"
+ BLM_australian_british-lemurian_summit:0 "British Austral-Lemurian Summit"
+ BLM_australian_british-lemurian_summit_desc:0 "This summit will bring forth new training exercises and greater commonwealth co-operation, Australian and British Lemurian soldiers will train side by side and try to establish a greater military co-operation between the two countries."
+ BLM_reform_the_army:0 "Modern Army"
+ BLM_reform_the_army_desc:0 "The British Lemurian army is no example of a modern army, filled with outdated tactics and old ideas of warfare we must modernize it to fit new narratives of warfare."
+ BLM_unrestmeeting:0 "Internal Affairs Committee"
+ BLM_unrestmeeting_desc:0 "Due to increasing unrest over the continuation of the Anglo-Saxon reforms, we must go forth and try to quell the unrest before we must quell a rebellion."
+ BLM_expand_the_ig:0 "Expand the I.G."
+ BLM_expand_the_ig_desc:0 "The Imperial Garrison has become outdated, undermanned and ill managed. We must fix this by expanding it and modernizing it, it is time for British Lemurians to know stability again."
